<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/purchase_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/purchase_information"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/buyer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/buyer_name_text"
            android:inputType="textPersonName"
            android:background="#f5f5f5"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase_information" />

        <EditText
            android:id="@+id/buyer_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:background="#f5f5f5"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/buyer_email"
            android:inputType="textEmailAddress"
            android:textColor="#646464"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buyer_name" />

        <EditText
            android:id="@+id/buyer_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:background="#f5f5f5"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/buyer_phone_number"
            android:inputType="phone"
            android:textColor="#646464"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buyer_email" />

        <EditText
            android:id="@+id/buyer_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:background="#f5f5f5"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/buyer_address_text"
            android:inputType="textPersonName"
            android:textColor="@color/lightGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buyer_phone" />

        <TextView
            android:id="@+id/example_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:letterSpacing="0.15"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="@+id/buyer_phone"
            app:layout_constraintTop_toBottomOf="@+id/buyer_phone" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="42dp"
            android:letterSpacing="0.15"
            android:text="@string/delivery_text"
            android:textColor="@color/lightGrey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buyer_address" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:buttonTint="#8a000000"
                android:letterSpacing="0.15"
                android:text="@string/delivery_morning"
                android:textColor="@color/lightGrey" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:buttonTint="#8a000000"
                android:text="@string/delivery_afternoon"
                android:letterSpacing="0.15"
                android:textColor="@color/lightGrey" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:buttonTint="#8a000000"
                android:text="@string/delivery_all_day"
                android:letterSpacing="0.15"
                android:textColor="@color/lightGrey" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>