<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="purchaseViewModel"
            type="student.tina.stylish.view.PurchaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/line10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/purchase_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/payment_information_text"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line10" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            android:spinnerMode="dialog"
            android:prompt="@string/pay_method"
            android:entries="@array/spinner_items"
            android:outlineProvider="background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase_information" />

        <tech.cherri.tpdirect.api.TPDForm
            android:id="@+id/tpd_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/all_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/all_purchase_text"
            android:textColor="@color/lightGrey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tpd_form" />

        <TextView
            android:id="@+id/purchase_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            app:displayPrice="@{purchaseViewModel.purchasePrice}"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/all_purchase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/all_purchase" />

        <TextView
            android:id="@+id/total_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/total_delivery_text"
            android:textColor="@color/lightGrey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_purchase" />

        <TextView
            android:id="@+id/delivery_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            app:displayPrice="@{purchaseViewModel.shippingFee}"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_delivery" />

        <View
            android:id="@+id/background_line"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_delivery" />

        <TextView
            android:id="@+id/total_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            app:displayAmount="@{purchaseViewModel.totalAmount}"
            android:textColor="@color/toolbarColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/background_line"
            app:layout_constraintStart_toStartOf="@+id/background_line"
            app:layout_constraintTop_toTopOf="@+id/background_line" />

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            app:displayPrice="@{purchaseViewModel.totalPrice}"
            android:textColor="@color/toolbarColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/background_line"
            app:layout_constraintEnd_toEndOf="@+id/background_line"
            app:layout_constraintTop_toTopOf="@+id/background_line" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#999999"
            android:stateListAnimator="@null"
            android:text="@string/confirm_payment_text"
            android:textColor="@color/toolbarColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_line"
            app:layout_constraintVertical_bias="0.0">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>